--- a/index.html
+++ b/index.html
@@ -8783,8 +8783,8 @@
                 transform: translate(-50%, -50%) scale(0.9);
                 color: #34d399;
                 font-weight: 900;
-                font-size: 36.4px;
-                /* [요청] 본래 크기(26px)의 1.4배 적용 */
+                font-size: 14.5px;
+                /* [요청] 본래 크기(26px)의 1.4배 상태에서 다시 40%로 축소 */
                 margin-top: 8px;
                 /* [요청] 8px 아래로 이동 */
                 text-shadow: 0 0 10px rgba(16, 185, 129, 0.8), 0 0 25px rgba(16, 185, 129, 0.6);
