UI: improve recommended numbers layout for mobile screens to prevent label cutoff

--- a/index.html
+++ b/index.html
@@ -1626,6 +1626,7 @@
                 /* Lucky Number Result Mobile Layout Removal - Keep items inline */
                 .result-row-wrapper {
                     padding: 5px 0;
+                    flex-wrap: wrap !important;
                 }
 
                 .result-label {
