UI: left align label and balls on mobile recommended numbers layout

--- a/index.html
+++ b/index.html
@@ -2580,6 +2580,13 @@
 
             .result-row-wrapper .result-balls {
                 justify-content: flex-start !important;
+                margin-left: 5px !important;
+            }
+
+            .result-row-wrapper>div:last-child {
+                /* Target the buttons column to ensure it stays inline with balls on mobile */
+                margin-left: auto !important;
+                padding-right: 5px !important;
             }
 
             .roadview-modal-content {
