--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 
                 #adContent,
                 #resultContent {
-                    padding: 15px 0 !important;
+                    padding: 10px 0 !important;
                     /* Side padding to 0 for perfect symmetry */
                     width: 100% !important;
                     box-sizing: border-box !important;
@@ -2567,37 +2567,39 @@
             /* Fix truncating issue for "자동" / "수동" labels on recommended number generation.
                Moves the label to its own line, keeping balls below it. */
             .result-row-wrapper {
-                padding: 6px 0 !important;
+                padding: 3px 0 !important;
+                /* Reduced from 6px */
                 flex-wrap: wrap !important;
             }
 
             .result-row-wrapper .result-label {
                 width: 100% !important;
                 text-align: left !important;
-                margin-bottom: 5px !important;
+                margin-bottom: 2px !important;
+                /* Reduced from 5px to half */
                 padding-left: 5px !important;
             }
 
             .result-row-wrapper .result-balls {
                 width: 100% !important;
-                /* Force to new line below label */
                 justify-content: flex-start !important;
                 padding-left: 5px !important;
                 margin-left: 0 !important;
             }
 
             .result-row-wrapper>div:last-child {
-                /* Target the buttons column to ensure it stays inline with balls on mobile */
                 width: 100% !important;
-                /* Force to new line below balls */
                 flex-direction: row !important;
-                /* Side by side horizontal */
                 justify-content: flex-end !important;
-                /* Align to the right edge */
                 margin-left: 0 !important;
-                margin-top: 5px !important;
+                margin-top: 3px !important;
+                /* Reduced from 5px */
                 padding-right: 5px !important;
                 gap: 8px !important;
+            }
+
+            .hide-on-mobile {
+                display: none !important;
             }
 
             .roadview-modal-content {
@@ -4905,7 +4907,7 @@
                         // OMR Button
                         const omrBtn = document.createElement('div');
                         omrBtn.className = 'omr-action-btn';
-                        omrBtn.innerHTML = '📝 OMR 보기';
+                        omrBtn.innerHTML = '📝 OMR<span class="hide-on-mobile"> 보기</span>';
                         omrBtn.style.justifyContent = 'center';
                         omrBtn.onclick = (e) => {
                             e.stopPropagation();
