UI: remove duplicate emoji from page title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 
     <meta charset="utf-8">
-    <title>🎰 KINOV 로또 명당지도 v1.0</title>
+    <title>KINOV 로또 명당지도 v1.0</title>
     <!-- Library for QR Code Scanning & Screen Capture -->
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
